Added rout for getting all saved pets by user

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PASSWORD=testtest
 DATABASE=petadoption
 DB_PORT=3306
 HOST=localhost
-USER_TOKEN=$2b$10$XRwF7dHHCZI/sZrgRO9ej.SC/8otzX.RYr2QjS5jvIxS9MjisDBpu
+USER_TOKEN=2b10XRwF7dHHCZI/sZrgRO9ej.SC/8otzX.RYr2QjS5jvIxS9MjisDBpu
