changed database to mysql

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT = 7070
-USERNAME=pet_adoption
-PASSWORD=testtest
-DATABASE=petadoption
+PORT = 3306
+USERNAME=b929f18922039b
+PASSWORD=23ca1b1c
+DATABASE=heroku_68790b29b5743c9
 DB_PORT=3306
-HOST=localhost
+HOST=us-cdbr-east-05.cleardb.net
 USER_TOKEN=2b10XRwF7dHHCZI/sZrgRO9ej.SC/8otzX.RYr2QjS5jvIxS9MjisDBpu
